Adding code for approach

--- a/presentation.tex
+++ b/presentation.tex
@@ -37,7 +37,7 @@ Dr. S. Kautz}
 
 %\pgfdeclareimage[height=0.25cm]{logo}{figures/logo}
 %\logo{\pgfuseimage{logo}}
-\bibliography{refs}
+%\bibliography{refs}
 
 \begin{document}
   \begin{frame}[plain]
@@ -47,10 +47,10 @@ Dr. S. Kautz}
   \input{intro}
   \input{problem}
   \input{approach}
-  \input{example}
-  \input{rdds}
+%  \input{example}
+%  \input{rdds}
   \input{evaluation}
   \input{summary}
 
-  \input{appendix}
+%  \input{appendix}
 \end{document}
