--- a/approach.tex
+++ b/approach.tex
@@ -1,104 +1,241 @@
 \section{Solution}
-\subsection{Solution Overview}
-\begin{frame}
-Resilient Distributed Datasets (RDDs)
-\begin{itemize}
-  \item Restricted form of distributed shared memory
-  \item Immutable
-  \item Only built through reading stable storage or coarse-grained
-  deterministic \textbf{transformations} (\texttt{map}, \texttt{filter}, \texttt{join}, \ldots)
-  \item \textbf{Actions} (\texttt{count}, \texttt{collect}, \texttt{reduce},
-  \ldots) either return value or write to storage
-\end{itemize}
-\end{frame}
+    \subsection{Solution Overview}
+        \begin{frame}
+        \frametitle{Our Solution}
+        \begin{itemize}
+          \item Software As Apps
+            \begin{itemize}
+                \item Make tool size smaller by pushing generic functionality in the platform
+            \end{itemize}
+          \item Programs as Script
+            \begin{itemize}
+                \item Make tool components more like scripts, than programs, easier to customize
+            \end{itemize}
+          \item Platform and appstore
+            \begin{itemize}
+                \item Provide a platform and ecosystem to distribute these tools
+            \end{itemize}
 
-\subsection{Example}
-\begin{frame}
-\begin{figure}
-\centering
-\includegraphics[width=0.9\linewidth]{figures/example1.jpg}
-\caption{Load error messages from a log into memory and then interactively
-search for various patterns.}
-\end{figure}
-\end{frame}
+        %  deterministic \textbf{transformations} (\texttt{map}, \texttt{filter}, \texttt{join}, \ldots)
+        %  \item \textbf{Actions} (\texttt{count}, \texttt{collect}, \texttt{reduce},
+        %  \ldots) either return value or write to storage
+        \end{itemize}
+        \end{frame}
 
-\begin{frame}
-\begin{itemize}
-  \item Transformations are lazy
-  		\begin{itemize}
-  		  \item Do not compute result until action is invoked
-  		  \item Useful
-  		\end{itemize}
-\end{itemize}
-\end{frame}
+        \begin{frame}
+            \frametitle{Software as Apps}
+            \begin{figure}
+                \centering
+                \includegraphics[scale=0.30]{figures/association.jpg}
+                \caption{Repository Mining Tool Building}
+            \end{figure}
+        \end{frame}
 
-\begin{frame}
-\begin{itemize}
-  \item Users can control two other aspects,
-	  \begin{itemize}
-		  \item \textbf{Persistence}: keep an RDD in memory using \texttt{persist} or
-		  \texttt{cache}. Can spill the RDDs to disk if not enough RAM,
-		  \item \textbf{Partitioning}: an RDDs elements be partitioned across machines
-		  based on a key in each record.
-	  \end{itemize}
-  \item In comparison with MapReduce,
-  		\begin{itemize}
-  		  \item map: a transformation that passes each dataset element through a
-  		  function and returns a new RDD representing the results,
-  		  \item reduce: an action that aggregates all the elements of the RDD using
-  		  some function and returns the final result to the driver program
-  		\end{itemize}
-\end{itemize}
-\end{frame}
+        \begin{frame}
+            \frametitle{Pull supporting tools out and make them available as part of platform}
+            \begin{figure}
+                \centering
+                \includegraphics[width=0.75\linewidth]{figures/candoia_idea_overview.jpg}
+                \caption{Repository Mining Tool Building}
+            \end{figure}
+        \end{frame}
 
-% \begin{lstlisting}[language=scala]
-% 	lines = spark.textFile("hdfs://...") // Base RDD
-% 	errors = lines.filter(_.startsWith("ERROR")) // Transformed RDD
-% 	messages = errors.map(_.split('\t')(2))
-% 	messages.persist()
-% 	
-% 	// so far everything in the driver (master),
-% 	
-% 	messages.filter(_.contains("foo")).count // Action
-% 	messages.filter(_.contains("bar")).count 
-% \end{lstlisting}
 
-\subsection{Fault Recovery}
-\begin{frame}
-Efficient fault recovery using \textbf{lineage}
-\begin{itemize}
-  \item On failure, log one operation to apply to many elements (e.g.,
-  \texttt{map} in previous example)
-  \item Recompute lost partitions on failure
-  \item No cost if nothing fails
-\end{itemize}
-\end{frame}
+        \begin{frame}
+            \frametitle{Programs as Script}
+            \begin{figure}
+                \centering
+                \includegraphics[scale=0.25]{figures/programtoscript.jpg}
+                \caption{Repository Mining Tool Building}
+            \end{figure}
+        \end{frame}
 
-\begin{frame}
-\begin{figure}
-\centering
-\includegraphics[width=0.7\linewidth]{figures/fault-tolerance.jpg}
-\caption{RDDs track their lineage (graph of transformations that built them) to
-rebuild lost data.}
-\end{figure}
-\end{frame}
+        \begin{frame}
+            \frametitle{Association mining as Candoia app}
+            \begin{figure}
+                \centering
+                \includegraphics[width=0.75\linewidth]{figures/programstoscriptincandoia.jpg}
+                \caption{Repository Mining Tool Building}
+            \end{figure}
+        \end{frame}
 
-\subsection{RDD vs DSM}
-\begin{frame}
-\begin{figure}
-\centering
-\includegraphics[width=0.9\linewidth]{figures/rdd-vs-dsm.jpg}
-\caption{Comparison of RDDs with distributed shared memory.}
-\end{figure}
-\end{frame}
+        \begin{frame}
+            \frametitle{Building and Sharing Candoia app}
+            \begin{figure}
+                \centering
+                \includegraphics[width=0.55\linewidth]{figures/overview.pdf}
+                \caption{Repository Mining Tool Building}
+            \end{figure}
+        \end{frame}
 
-\subsection{RDDs Limitations}
-\begin{frame}
-\begin{itemize}
-  \item Works best for batch applications that apply same operation to all
-  elements of a dataset,
-  \item Not well-suited for applications that do asynchronous fine-grained
-  updates to shared state, e.g., storage system for a web application.
-\end{itemize}
-\end{frame}
 
+    \subsection{Candoia Apps}
+        \begin{frame}
+        \frametitle{Candoia App Structure}
+        \begin{columns}
+            \column{0.55\textwidth}
+                \begin{itemize}
+                  \item Mining Logic
+                    \begin{itemize}
+                        \item Extension of Boa DSL
+                    \end{itemize}
+                  \item Visualization Layout
+                    \begin{itemize}
+                        \item Html
+                        \item CSS
+                    \end{itemize}
+                  \item Glue Code
+                    \begin{itemize}
+                        \item Java script
+                    \end{itemize}
+                  \item Structure Decription
+                    \begin{itemize}
+                        \item Json (file package.json)
+                    \end{itemize}
+                \end{itemize}
+
+            \column{0.55\textwidth}
+                \begin{figure}
+                    \centering
+                    \includegraphics[scale=0.30]{figures/structure.png}
+                    \caption{Repository Mining Tool Building}
+                \end{figure}
+        \end{columns}
+        \end{frame}
+
+     \subsection{Data Abstraction}
+        \begin{frame}
+        \frametitle{Data Abstraction}
+            \begin{itemize}
+                \item Queries are written over data abstractions
+               \item Data abstractions provide capability of running an app over data collected
+               from diverse sources
+               \item Candoia's data abstraction is extension of Boa DSL.
+            \end{itemize}
+        \end{frame}
+
+
+        \begin{frame}
+        \frametitle{Candoia Data Schema}
+                \begin{figure}
+                    \centering
+                    \includegraphics[scale=0.45]{figures/data-schema.pdf}
+                    \caption{Candoia's data schema}
+                \end{figure}
+        \end{frame}
+
+    \subsection{Customization}
+        \begin{frame}
+        \frametitle{Customizations}
+            Two levels of customizations
+            \begin{itemize}
+                \item Data source customizations
+                \item App Customization
+            \end{itemize}
+        \end{frame}
+
+        \begin{frame}
+        \frametitle{Customizations}
+            Two levels of customizations
+            \begin{itemize}
+                \item Data source customizations
+                    \begin{itemize}
+                        \item Concerned with changing the source of the data
+                        \item No Change in app required
+                        \item Just rerun the application with new datasource
+                    \end{itemize}
+                \item Customization in Apps
+            \end{itemize}
+        \end{frame}
+
+        \begin{frame}
+        \frametitle{Customizations}
+            Two levels of customizations
+            \begin{itemize}
+                \item Data source customizations
+                \item Customization in Apps
+                    \begin{itemize}
+                        \item Concerned with customizing different part of the apps
+                        \item app customizations in Candoia are more focused in terms of findings the right component(s) for customizations
+                        \item minimizes the changes required
+                    \end{itemize}
+            \end{itemize}
+        \end{frame}
+
+        \begin{frame}
+        \frametitle{Customizations}
+            Two levels of customizations
+            \begin{itemize}
+                \item Data source customizations
+                \item Customization in Apps
+                    \begin{itemize}
+                        \item Concerned with customizing different part of the apps
+                        \item app customizations in Candoia are more focused in terms of findings the right component(s) for customizations
+                        \item minimizes the changes required
+                            \begin{itemize}
+                                \item Changing from Apriori algorithm to EClat in Association mining
+                                \item Changing from File association to package level associattion
+                            \end{itemize}
+                        \end{itemize}
+            \end{itemize}
+        \end{frame}
+
+    \subsection{Evaluation Engine}
+        \begin{frame}
+            \frametitle{Candoia Evaluation Engine}
+            \begin{itemize}
+                \item Interpreter based Query evaluator
+                \item Reads data from local and remote software artifacts
+                    \begin{itemize}
+                        \item Forges: Github, Source Forge
+                        \item VCS: GIT, SVN
+                        \item Bug Tracker: Bugzilla, JIRA, Github-Issue, SF-Ticket
+                        \item Programming Language: Java, Javascript
+                    \end{itemize}
+                \item Process level parallelization for running multiple apps
+                \item Thread level prarallelization for dataset creation
+                \item Provides fine grained control to Candoia frontend
+                \end{itemize}
+            \end{frame}
+
+
+    \subsection{Security Architecture}
+        \begin{frame}
+            \frametitle{Candoia Security Architecture}
+            \begin{itemize}
+                \item Prevent apps from corrupting each other
+                \item Allow access to user data on a need to know basis
+            \end{itemize}
+         \end{frame}
+
+        \begin{frame}
+            \frametitle{Chromium based User Interface}
+            \begin{itemize}
+                \item Candoia builds on the process architecture of Chromium
+                \item Process communicates with controller process via Inter Process Communication
+                \item Controller process mediates interaction between file system, window data etc. by exposing APIs.
+                \item An app can only access resources using exposed APIs.
+            \end{itemize}
+            \emph{var data = api.boa.run('myprog.boa')}
+         \end{frame}
+
+        \begin{frame}
+            \frametitle{Few APIs available to Candoia app}
+            \begin{itemize}
+                \item Running MSR queries (api.boa)
+                \item Reading (not writing) files within app (api.fs)
+                \item Saving arbitrary data between instances (api.store)
+                \item Getting its own package info such as version (api.meta)
+                \item Inter-Process-Communication handle (api.ipc)
+%                \item Using pre-made views/graphs. (api.view)
+            \end{itemize}
+            \emph{var data = api.boa.run('myprog.boa')}
+         \end{frame}
+
+        \begin{frame}
+            \frametitle{Candoia Exchange}
+            \begin{itemize}
+                \item A web platform for sharing MSR apps
+                \item Candoia frameworks can connect to exchange for gathering information and  installing apps
+            \end{itemize}
+         \end{frame}
