addressing professor's comment

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -45,6 +45,11 @@
             \input{figures/questions}
          \end{frame}
 
+%        \begin{frame}
+%            \frametitle{Candoia apps used in evaluation}
+%            \input{figures/question}
+%         \end{frame}
+
         \begin{frame}
             \frametitle{Results Analysis: App \#14 Maps modules to developers}
                 \begin{itemize}
@@ -92,6 +97,11 @@
             \input{figures/adoptability}
          \end{frame}
 
+        \begin{frame}
+            \frametitle{LOC changes in Boa v/s. Java}
+            \input{figures/adoptability1}
+         \end{frame}
+
  \subsection{Customizability}
         \begin{frame}
             \frametitle{Customizability}
@@ -107,4 +117,9 @@
         \begin{frame}
 %            \frametitle{LOC changes in Boa v/s. Java}
             \input{figures/customizability}
+         \end{frame}
+
+        \begin{frame}
+%            \frametitle{LOC changes in Boa v/s. Java}
+            \input{figures/customizability1}
          \end{frame}
