--- a/intro.tex
+++ b/intro.tex
@@ -1,34 +1,66 @@
+\section{Background}
+\subsection{MSR}
+    \begin{frame}
+    \frametitle{Mining Software Repository (MSR)}
+    Analysis of rich data available in software repositories such as version control, bug
+    tracking, source code, mailing list and organiation information.
+
+    \begin{itemize}
+        \item Significant contribution in Programming language design and Software engineering domains.
+        \item Impact of MSR tools can be increased if the process of building and widely distributing MSR tools is eased.
+        \footnote{Robles et.al, Replicating MSR:A study of the potential replicability of papers
+        published in the Mining Software Repositories proceedings, 2010}
+    \end{itemize}
+    \end{frame}
+
+\section{Acknowledgement}
+\subsection{Acknowledgement}
+        \begin{frame}
+        \frametitle{Acknowledgement}
+%        \centering
+            \begin{itemize}
+               \item \tiny{\emph{Nitin Tiwari, Ganesha Upadhyaya, and Hridesh Rajan, "Candoia: a
+                platform and ecosystem for mining software repositories tools.",
+                ICSE'16}} (Distinguished Poster Award)\\
+                \item \tiny{\emph{Tiwari, Nitin M., Ganesha Upadhyaya, Dr. Hoan Anh Nguyen and Hridesh Rajan.
+                    "Candoia: A Platform for Building and Sharing Mining Software Repositories Tools as Apps", MSR'17}} \\
+                \item This work was supported in part by the US National Science Foundation under grants CCF-15-18897, CNS-15-13263, and CCF-14-23370.
+                \item Would like to thank Dalton D. Mills and Trey Erenberger for helping with
+                Candoia frontend implementation, Eric Lin for implementing several Candoia apps
+                and Dr. Robert Dyer for valuable feedback on publication draft
+            \end{itemize}
+        \end{frame}
+
+
 \section{Overview}
+    \begin{frame}
+        \begin{itemize}
+            \item Problem
+            \begin{itemize}
+                \item Building easily customizable, adoptable and applicable mining software repository tools
+            \end{itemize}
 
-\begin{frame}
-\begin{itemize}
-  \item Problem
-  \begin{itemize}
-    \item Building easily customizable, adoptable and applicable mining software repository tools
-  \end{itemize}
+            \item Solution
+            \begin{itemize}
+                \item An ecosystem which offers suitable abstractions and computational means to realize the process for building and sharing MSR tools as apps.
+            \end{itemize}
 
-  \item Solution
-  \begin{itemize}
-    \item An ecosystem which offers suitable abstractions and computational means to realize the
-    process for building and sharing MSR tools as apps.
-  \end{itemize}
+        %  \item Candoia Eco-system
+        %  	  \begin{itemize}
+        %	    \item Available abstractions
+        %	    \item Process of building MSR tools
+        %	  \end{itemize}
 
-%  \item Candoia Eco-system
-%  	  \begin{itemize}
-%	    \item Available abstractions
-%	    \item Process of building MSR tools
-%	  \end{itemize}
+            \item Evaluation
+        % \begin{itemize}
+        %      \item Available abstractions
+        %      \item Process of building MSR tools
+        %   \end{itemize}
 
-  \item Evaluation
-% \begin{itemize}
-%      \item Available abstractions
-%      \item Process of building MSR tools
-%   \end{itemize}
-
-  \item Related works, Conclusion, \& Future Work
-  	  \begin{itemize}
-  	    \item Existing open source tools and frameworks
-  	    \item Open source datasets
-  	  \end{itemize}
-\end{itemize}
-\end{frame}
+            \item Related works, Conclusion, \& Future Work
+              \begin{itemize}
+                \item Existing open source tools and frameworks
+                \item Open source datasets
+              \end{itemize}
+        \end{itemize}
+    \end{frame}
