--- a/appendix.tex
+++ b/appendix.tex
@@ -1,68 +1,106 @@
 \appendix
+        \begin{frame}
+        \frametitle{Candoia Data Schema}
+                \begin{figure}
+                    \centering
+                    \includegraphics[scale=0.45]{figures/data-schema.pdf}
+                    \caption{Candoia's data schema}
+                \end{figure}
+        \end{frame}
 
-% make sure you have a blank slide in case you accidentally go past your conclusion
-\begin{frame}[plain]
-\end{frame}
+        \begin{frame}
+            \frametitle{Few APIs available to Candoia app}
+            \begin{itemize}
+                \item Running MSR queries (api.boa)
+                \item Reading (not writing) files within app (api.fs)
+                \item Saving arbitrary data between instances (api.store)
+                \item Getting its own package info such as version (api.meta)
+                \item Inter-Process-Communication handle (api.ipc)
+%                \item Using pre-made views/graphs. (api.view)
+            \end{itemize}
+            \centering
+                \emph{var data = api.boa.run('myprog.boa')}
+         \end{frame}
+
+        \begin{frame}
+            \frametitle{Candoia Exchange}
+            \begin{itemize}
+                \item A web platform for sharing MSR apps
+                \item Candoia frameworks can connect to exchange for gathering information and  installing apps
+            \end{itemize}
+         \end{frame}
+
+    \subsection{Platforms}
+        \begin{frame}
+            \begin{columns}
+                \column{0.55\textwidth}
+                    \textbf{Moose}
+                    \begin{itemize}
+                      \item A platforms for reusing of data mining tools.
+                      \item Provides scripting and visualizations
+                      \item Difference lies in the focus of the tools
+                      \item Candoia is focused towards MSR and integrates MSR tools
+                    \end{itemize}
+
+                \column{0.55\textwidth}
+                \textbf{RepoGrams}
+                    \begin{itemize}
+                      \item Helps researchers gather evaluation targets and calculate metrices on the target project
+                    \end{itemize}
+            \end{columns}
+        \end{frame}
+
+        \begin{frame}
+            \begin{columns}
+                \column{0.55\textwidth}
+                    \textbf{Kenyon and Sourcerer}
+                    \begin{itemize}
+                      \item Defiens a databse schema for metadata and source code
+                      \item Provide access to the dataset via SQL
+                    \end{itemize}
+
+                \column{0.55\textwidth}
+                    \textbf{Alitheia Core}
+                    \begin{itemize}
+                      \item Provide a highly extensible framework for analyzing software product
+                      \item Process metrics on a large database of open source projects source
+                    \end{itemize}
+            \end{columns}
+         \end{frame}
+
+        \begin{frame}
+            \begin{columns}
+                \column{0.55\textwidth}
+                    \textbf{FLOSSMole}
+                    \begin{itemize}
+                      \item Analysis on the project metadata
+                    \end{itemize}
+
+                \column{0.55\textwidth}
+                    \textbf{Groundhog}
+                    \begin{itemize}
+                      \item Infrastructure for downloading and analysing projects from SourceForge
+                    \end{itemize}
+            \end{columns}
+        \end{frame}
 
 
-% these slides are to help answer potential questions and generally arent shown
-% unless needed or there is extra time
-\begin{frame}[plain]{Logistic Regression}
-Logistic regression,
-\begin{figure}
-\centering
-\includegraphics[width=0.9\linewidth]{figures/logistic-regression.jpg}
-\end{figure}
-\begin{itemize}
-  \item \texttt{points} is a persistent RDD produced by \texttt{map} on text
-  file
-  \item repeatedly run \texttt{map} and \texttt{reduce} to compute gradient at
-  each step by summing function of the current w.
-  \item keeping \texttt{points} in memory across iterations yields 20x speedup.
-\end{itemize}
-\end{frame}
+    \subsection{Dataset}
+        \begin{frame}
+        \textbf{GHTorrent, PROMISE Repository, SourcererDB and Boa}
+           \begin{itemize}
+                \item Provides standard dataset for evaluation
+                \item SourceDB also provides means to create custom dataset
+            \end{itemize}
+            Focus is on lifting the burden of data curation from user
+        \end{frame}
 
-\begin{frame}[plain]{Word Count}
-\begin{figure}
-\centering
-\includegraphics[width=0.9\linewidth]{figures/word-count.jpg}
-\end{figure}
-\end{frame}
-
-\begin{frame}[plain]{Performance Tuning}
-Problems,
-\begin{itemize}
-  \item Too few partitions
-  \item Large per-key \texttt{groupBy()}
-  \item Shipped all data across the cluster 
-\end{itemize}
-
-Guidelines
-\begin{itemize}
-  \item Ensure enough partitions (often 100 - 10000), mostly based on task
-  execution time at least 100ms (upper bound), at least ~2x number of cores in
-  cluster (lower bound)
-  \item Minimize memory consumption while sorting and large keys in groupBys
-  \item Minimize amount of data shuffled  
-\end{itemize}
-
-Resolution
-\begin{itemize}
-  \item Increase \texttt{spark.executor.memory}
-  \item Increase number of partitions
-  \item Re-evaluate program structure   
-\end{itemize}
-\end{frame}
-
-\begin{frame}[plain]{Example 2 Optimization}
-\begin{figure}
-\centering
-\includegraphics[width=0.9\linewidth]{figures/example2.jpg}
-\end{figure}
-
-\begin{figure}
-\centering
-\includegraphics[width=0.9\linewidth]{figures/example2-optimized.jpg}
-\end{figure}
-\end{frame}
-
+    \subsection{Future Work}
+        \begin{frame}
+            \frametitle{Future Work}
+            \begin{itemize}
+                \item Adding new software tools and technologies
+                \item Building addiotional useful tools
+                \item Utilizing underlying GPUs for better performance
+            \end{itemize}
+        \end{frame}
